Mobile view CSS file

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               <figcaption class="offscreen">icon-error</figcaption>
             </figure>
           </div>
+          <p class="status-message"></p>
         </form>
       </main>
     </section>
@@ -102,6 +103,6 @@
 
       <figcaption class="offscreen">hero-desktop</figcaption>
     </figure>
-  
+  <script type="module" src="main.js"></script>
 </body>
 </html>
